--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 .idea/
-target/
 *.iml
-*.ipr
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
