--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,8 @@ plugins {
     id "com.tngtech.jgiven.gradle-plugin" version "0.18.2"
     id 'findbugs'
     id 'pmd'
-
-    id 'jacoco'
-    id 'com.github.kt3k.coveralls' version '2.8.4'
+    
+    id "com.github.kt3k.coveralls" version "2.4.0"
 }
 
 group = 'fr.duminy.desktop'
@@ -132,7 +131,7 @@ jacocoTestReport {
 }
 
 coveralls {
-    jacocoReportPath 'build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml'
+    jacocoReportPath = "${projectDir}/build/reports/jacoco/test/jacocoTestReport.xml"
 }
 
 //noinspection GrDeprecatedAPIUsage //TODO use SpotBugs when it will be fixed
