--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,11 @@ install: true
 
 os: linux
 dist: trusty
-jdk: oraclejdk8
+jdk:
+  - openjdk8
+  - openjdk11
+  - oraclejdk8
+  - oraclejdk11
 
 script:
   - ./gradlew build --info --stacktrace
